--- a/src/features/posts/components/CreatePost.css
+++ b/src/features/posts/components/CreatePost.css
@@ -15,8 +15,7 @@ Label {
   padding-bottom: 8px;
   height: 5%;
 }
-Span {
-  /* background-color: rgb(89, 89, 110); */
+.Span {
   background-color: red;
   color: white;
   text-align: center;
@@ -31,42 +30,45 @@ Label:hover {
 
 Form {
   background-color: rgb(21, 21, 26);
-  width: 50%;
+  width: 45%;
   height: 335px;
   display: block;
-  margin-left: 28%;
-  margin-top: 5%;
+  margin-left: 25.5%;
+  margin-top: 40%;
   position: absolute;
   opacity: 0.5;
+  bottom: 160px;
+  align-items: center;
 }
 
-.inputClasname {
+Form Textarea {
   background-color: rgb(35, 35, 43);
-  width: 60%;
-  height: 40%;
-  margin-left: 22%;
-  margin-top: 10%;
-  padding-top: 0;
+  width: 400px;
+  height: 150px;
   border-radius: 5px;
-  border-bottom: 0;
-  border-right: 0;
-  position: relative;
+  top: 220px;
+  left: 90px;
+  bottom: 130px;
   color: white;
   display: block;
+  resize: none;
+  display: flex;
+  align-items: center;
 }
 
-Button {
+Form Button {
   display: block;
+
   background-color: rgb(35, 35, 43);
-  margin-top: 5px;
+  margin-top: 200px;
   text-align: center;
-  margin-left: 45%;
+  margin-left: 40%;
   height: 40px;
   width: 90px;
   border-radius: 5px;
   color: white;
 }
-Button:hover {
+Form Button:hover {
   background-color: rgb(58, 58, 68);
 }
 
@@ -78,7 +80,10 @@ Button:hover {
     box-sizing: border-box;
   }
   Form {
-    width: 22.5%;
+    width: 20%;
+  }
+  Form Textarea {
+    margin-top: 50px;
   }
   Button {
     box-sizing: border-box;
